src/objects/Briefing__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>This will give agents easy access to information for all initiatives with live links to relevant associated articles enhancing their experience and interaction with knowledge.</description>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Associated_Articles__c</fullName>
        <label>Associated Articles</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Background_Summary__c</fullName>
        <label>Background / Summary</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Ingredient_Information__c</fullName>
        <label>Ingredient Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Key_Search_Words__c</fullName>
        <label>Key Search Words</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <label>Other Information</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pictorial__c</fullName>
        <label>Pictorial</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Paths__c</fullName>
        <label>Product Paths</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_of_Shipping_Date__c</fullName>
        <label>Start of Shipping Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Use_Instructions__c</fullName>
        <label>Use Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Briefing</label>
    <pluralLabel>Briefings</pluralLabel>
</CustomObject>